# texti

./: Cargo.toml
.config/: config.yaml
src/: action.rs  app.rs  cli.rs  errors.rs  event.rs  main.rs  tui.rs  util.rs
src/component/: component_utils.rs  confirm_dialog.rs  editor.rs  effect_runner.rs  help.rs  home.rs  mod.rs  navigator.rs  notification.rs  preview_component.rs
src/component/editor/: buffer.rs  component.rs  mod.rs  search_box.rs
src/component/file_selector/: component.rs  file_history.rs  file_history_saver.rs  input.rs  mod.rs  preview_component.rs
src/config/: app_config.rs  effects.rs  effects_config.rs  keybindings.rs  mod.rs
